--- a/ThanksPage/scss/_thanksPage.scss
+++ b/ThanksPage/scss/_thanksPage.scss
@@ -1,10 +1,14 @@
-.thanks-container{
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-    background-color: #03080a;
-    padding: 5%;
-    
+.thanks-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  background-color: #03080a;
+  padding: 5%;
+  h1{
+    color:#7C83FD;
+  }
+  h3{
+    color: white;
+  }
 }
