--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -1,78 +1,123 @@
-.banner{
-    height: 100%;
+.banner {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  overflow: hidden;
+  top: 0;
+  div{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 69vw;
+    height: 40px;
+    text-transform: uppercase;
+    text-decoration: none;
+    z-index: 2;
     color: white;
+    justify-content: center;
+    
+    top: 25%;
+    line-height: 40px;
+
+    position: absolute;
+    
+    right: 0;
+    bottom: 0;
+    left: 0;
+    
+    margin: auto;
+
     overflow: hidden;
-    top: 0;
-    
-    
-    h3{
-        
-        bottom: 0;
-        color: black;
-        z-index: 1;
-        
-    }
-    
-
-        video{
-            
-            
-            
-            z-index: -1;
-            
-            
-    
-            
-        }
-        
-        
-        
-
-
-
-        h1{
-            letter-spacing: 5px;
-            position: absolute;
-            font-size: 4rem;
-            text-transform: uppercase;
-            text-align: center;
-            background: rgba(0,0,0,0.2);
-            padding: 2rem;
-            border-radius: 20px 0;
-            justify-content: center;
-            animation: aparece 10s ;
-            top: 30vh;
-    
-            &::before, &::after{
-                content: '';
-                position: absolute;
-                top: 0;
-                height: 100%;
-                width:  50%;
-            }
-            &::before{
-                left: 0;
-                border-bottom: 6px solid #000;
-            }
-            &::after{
-                right: 0;
-                border-top: 6px solid #000;
-            }
-            
-        }
-        h2{
-            position: absolute;
-            text-transform: uppercase;
-            text-decoration: none;
-            z-index: 2;
-            color: white;
-            justify-content: center;
-            animation: aparece 10s ;
-            top: 60vh;
-        }
-        
-
+  }
+  ul{
+    list-style: none;
+    padding-left: 10px;
+    animation: cambiar 25s infinite;
 }
+ul,p{
+    margin: 0;
+    font-family: "Montserrat", sans-serif;
+    font-size: x-large;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+@keyframes cambiar{
+    0%{margin-top: 0px; opacity: 0;}
+    8%{margin-top: 0px; }
+    16%{margin-top: 0px; opacity: 1;}
+    25%{margin-top: 0px; }
+    32%{margin-top: 0px; opacity: 0;}
+
+    33%{margin-top: -40px; opacity: 0;}
+    41%{margin-top: -40px;}
+    49%{margin-top: -40px; opacity: 1;}
+    57%{margin-top: -40px;}
+    65%{margin-top: -40px; opacity: 0;}
+    
+
+    66%{margin-top: -80px; opacity: 0;}
+    74%{margin-top: -80px;}
+    82%{margin-top: -80px; opacity: 1;}
+    90%{margin-top: -80px;}
+    99%{margin-top: -80px; opacity: 0;}
+
+    100%{margin-top: 0px; opacity: 0;}
+    
+}
+
+  h3 {
+    bottom: 0;
+    color: black;
+    z-index: 1;
+  }
+
+  video {
+    z-index: -1;
+  }
+
+  h1 {
+    letter-spacing: 5px;
+    position: absolute;
+    font-size: calc(4rem + .5vw);
+    text-transform: uppercase;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.2);
+    padding: 2rem;
+    border-radius: 20px 0;
+    justify-content: center;
+    animation: aparece 5s;
+    top: 30vh;
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      height: 100%;
+      width: 50%;
+    }
+    &::before {
+      left: 0;
+      border-bottom: 6px solid #000;
+    }
+    &::after {
+      right: 0;
+      border-top: 6px solid #000;
+    }
+  }
+  h2 {
+    position: absolute;
+    font-size: calc(1rem + .3vw);
+    z-index: 2;
+    color: white;
+    left: 30%;
+    
+    top: 60vh;
+   
+  }
+  
+  
+  
+  }
+
