--- a/ThanksPage/scss/main.css
+++ b/ThanksPage/scss/main.css
@@ -15,12 +15,20 @@
   padding: 5%;
 }
 
+.thanks-container h1 {
+  color: #7C83FD;
+}
+
+.thanks-container h3 {
+  color: white;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 * h3 {
