--- a/scss/_about-me.scss
+++ b/scss/_about-me.scss
@@ -3,58 +3,59 @@
   left: 0;
   overflow: hidden;
   background: black;
-  
 
- 
-  .animado{
+  .animado {
     animation: aparece 10s;
-    
-    
   }
   div {
     position: absolute;
     top: 100%;
     display: flex;
     flex-direction: column;
-      div img {
+    input{
+      position: relative;
+      top: -50px;
+      visibility: hidden;
+    }
+    div img {
+      position: relative;
+      left: 50%;
+      border-radius: 50%;
+      width: 25vw;
+      top: 15vh;
+    }
+    .about-me_texto {
+      height: 90vh;
+      top: -35rem;
+      div {
         position: relative;
-        left: 130px;
-        border-radius: 50%;
-        width: 25rem;
-        top: 60px;
+        color: white;
+        left: 50vw;
+        width: 40vw;
+        
+        border-radius: 20px 0;
+        display: flex;
+        flex-direction: column;
+        background: rgba(255, 255, 255, 0.1);
+        padding: 9%;
+        margin-bottom: 20px;
+
+        h2 {
+          text-transform: uppercase;
+          text-decoration: none;
+          font-size: calc(.9rem + .7vw);
+          font-weight: unset;
+        }
+        p{
+          font-size: calc(.8rem + .1vw);
+        }
+        
         
       }
-       .about-me_texto{
-        
-
-          div{
-             
-             position: relative;
-             color: white;
-             left: 300%;
-             width: 200%;
-             border-radius: 20px 0;
-             display: flex;
-             flex-direction: column;
-             background: rgba(255,255,255,0.1);
-             padding: 2rem;
-             margin-bottom: 20px;
-             
-        
-              h2 {
-              text-transform: uppercase;
-              text-decoration: none;
-              font-size: 2rem;
-              font-weight: unset;
-              
-
-              }
-       }
-      
     }
   }
-  
 }
+
 @keyframes aparece {
   0% {
     display: none;
@@ -63,5 +64,4 @@
   100% {
     opacity: 1;
   }
-  
 }
