--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,137 +1,130 @@
-.contact{
-        
-        
-        min-height: 100vh;
-        background: #03080a;
-        
-    h3{
-        text-align: end;
-        padding-right: 8rem;
-    }
+.contact {
+  min-height: 75vh;
+  background: black;
 
-    .container{
-        
-        padding: 20px 7rem;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        
-        .row100{
+  h3 {
+    color: #4D5865;
+    text-align: end;
+    padding-right: 10%;
+    
+  }
+
+  .container {
+    
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 10%;
+
+    .row100 {
+      position: relative;
+      width: 100%;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      .col {
+        position: relative;
+        width: 100%;
+        padding: 0 10px;
+        margin: 30px 0 10px;
+        transition: 0.5s;
+        .inputBox {
+          position: relative;
+          width: 100%;
+          height: 40px;
+          color: #4D5865;
+          text-transform: uppercase;
+
+          input,
+          textarea {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: transparent;
+            box-shadow: none;
+            border: none;
+            outline: none;
+            font-size: 18px;
+            padding: 0 10px;
+            z-index: 1;
+            color: black;
+          }
+          .text {
+            position: absolute;
+            top: 0;
+            left: 0;
+            line-height: 40px;
+            font-size: 18px;
+            padding: 0 10px;
+            display: block;
+            transition: 0.5s;
+            pointer-events: none;
+          }
+          input:focus + .text,
+          input:valid + .text {
+            top: -35px;
+            left: -10px;
+          }
+
+          .line {
+            position: absolute;
+            bottom: 0;
+            display: block;
+            width: 100%;
+            height: 2px;
+            background: #4D5865;
+            transition: 0.5s;
+            border-radius: 2px;
+            pointer-events: none;
+          }
+          input:focus ~ .line,
+          input:valid ~ .line {
+            height: 100%;
+          }
+          textarea {
             position: relative;
             width: 100%;
-            display: grid;
-            grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
-            .col{
-                position: relative;
-                width: 100%;
-                padding: 0 10px;
-                margin: 30px 0 10px;
-                transition: .5s;
-                .inputBox{
-                    position: relative;
-                    width: 100%;
-                    height: 40px;
-                    color: white;
-                    text-transform: uppercase;
-
-    
-                    input,
-                    textarea{
-                        position: absolute;
-                        width: 100%;
-                        height: 100%;
-                        background:transparent;
-                        box-shadow: none;
-                        border: none;
-                        outline: none;
-                        font-size: 18px;
-                        padding: 0 10px;
-                        z-index: 1;
-                        color:#03080a;
-                        
-    
-                    }
-                    .text{
-                        position: absolute;
-                        top: 0;
-                        left: 0;
-                        line-height: 40px;
-                        font-size: 18px;
-                        padding: 0 10px;
-                        display: block;
-                        transition: 0.5s;
-                        pointer-events: none;
-                    }
-                    input:focus + .text,
-                    input:valid + .text{
-                        top: -35px;
-                        left: -10px;
-                    }
-                    
-                    .line{
-                        position: absolute;
-                        bottom: 0;
-                        display: block;
-                        width: 100%;
-                        height: 2px;
-                        background: white;
-                        transition: 0.5s;
-                        border-radius:2px ;
-                        pointer-events: none;
-    
-                    
-                    }
-                    input:focus ~ .line,
-                    input:valid ~ .line{
-                        height: 100%;
-                    }
-                    textarea{
-                        position: relative;
-                        width: 100%;
-                        height: 100px;
-                        padding: 10px 0;}
-                    textarea{
-                            height: 100%;
-                            resize: none;
-    
-                        }
-                    textarea:focus + .text,
-                    textarea:valid + .text{
-                    top: -30px;
-                    left: -10px;
-                    }
-                    textarea:focus ~ .line,
-                    textarea:valid ~ .line{
-                    height: 100%;
-                    }
-    
-                }
-                input[type="submit"]{
-                    border: none;
-                    padding: 7px 35px;
-                    cursor: pointer;
-                    outline: none;
-                    background: white;
-                    color: #000;
-                    font-size: 18px;
-                    border-radius: 2px;
-
-                } 
-                input[type=number]::-webkit-inner-spin-button, 
-                input[type=number]::-webkit-outer-spin-button { 
-                -webkit-appearance: none; 
-                margin: 0; 
-                }
-
-                input[type=number] { -moz-appearance:textfield; }
-
-    
-            }
-    
+            height: 100px;
+            padding: 10px 10px;
+            
+          }
+          textarea {
+            height: 100%;
+            resize: none;
+          }
+          textarea:focus + .text,
+          textarea:valid + .text {
+            top: -30px;
+            left: -10px;
+          }
+          textarea:focus ~ .line,
+          textarea:valid ~ .line {
+            height: 100%;
+          }
         }
-    
+        input[type="submit"] {
+          border: none;
+          padding: 7px 35px;
+          cursor: pointer;
+          outline: none;
+          background: #4D5865;
+          color: black;
+          font-size: 18px;
+          border-radius: 2px;
+          
+        }
+        #submit{
+          text-align: center;
+        }
+        input[type="number"]::-webkit-inner-spin-button,
+        input[type="number"]::-webkit-outer-spin-button {
+          -webkit-appearance: none;
+          margin: 0;
+        }
+
+        input[type="number"] {
+          -moz-appearance: textfield;
+        }
+      }
     }
-
+  }
 }
-
-
