--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -1,113 +1,93 @@
-    
-.portfolio{
-    
-    position: relative;
-    background: rgb(0,0,0);
-    overflow: hidden;
-    text-align: center;
+.portfolio {
+  position: relative;
+  background: rgb(0, 0, 0);
+  overflow: hidden;
+  text-align: center;
+  height: 100vh;
+  z-index: 3;
+
+  &:before {
+    content: "";
+    background: url("../dist/img/pexels-veeterzy-39811.jpg") no-repeat center;
+    background-size: cover;
+    position: absolute;
+    z-index: 1;
+    display: block;
+    opacity: 0.4;
+    background-size: cover;
+    width: 100%;
     height: 100vh;
-    z-index: 3;
-    
+  }
 
-    &:before {
-        content: "";
-        background-image:  url('../dist/img/pexels-veeterzy-39811.jpg');
-        background-size: cover;
-        position: absolute;
-        z-index: 1;
-        display: block;
-        opacity: .4;
-        background-size: cover;
-        width: 100%;
-        height: 100vh;
-        
-        
+  .carousel {
+    top: 60px;
+    padding: 0% 5%;
+    .card {
+      background: rgba(0, 0, 0, 0.2);
+
+      border-radius: 6px;
+      padding: 15px 0px;
+      text-align: center;
+      transition: all 1.2s ease;
+
+      &:hover {
+        background: rgba(0, 0, 0, 0.5);
+        .box {
+          transform: scale(0.95);
+          img {
+            
+            transition: 1.2s;
+          }
+        }
+      }
+      a {
+        text-decoration: none;
+        color: #646464;
+      }
+      .box {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        transition: 1.2s;
+        .text {
+          font-size: 25px;
+          font-weight: 500;
+          margin: 10px 0 7px 0;
+          color: white;
+        }
+
+        img {
+          height: 250px;
+          width: 250px;
+          object-fit: cover;
+          opacity: 0.9;
+          border-radius: 3%;
+          align-items: center;
+          
+        }
+      }
     }
-    
-    .carousel{
-       top: 60px;
-       padding: 0% 5%;
-        .card{
-            background:  rgba(0,0,0,.5);
-            
-            border-radius: 6px;
-            padding: 15px 0px;
-            text-align: center;
-            transition: all 1.2s ease;
-            
-            &:hover{
-                background: rgba(0,0,0,0);
-                .box{
-                    transform: scale(1.05);
-                    img{
-                        
-                        opacity: 1;
-                        transition: 1.2s;
-                    }
-                    
-                }
-                
-            }
-            a{
-               text-decoration: none; 
-               color: #646464;
-            }
-            .box{
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                transition: 1.2s;
-                .text{
-                    font-size: 25px;
-                    font-weight: 500;
-                    margin: 10px 0 7px 0;
-                    color: white;
-                    
-                }
-    
-                img{
-                    height: 250px;
-                    width: 250px;
-                    object-fit: cover;
-                    opacity: .6;
-                    border-radius:3%;
-                    align-items: center;
-                    margin-left: 2.3vw;
-                    
-                }
-            }
-    
-            
-    
-            
-    
-        } 
-
-    }
-    
-    
-    
-
+  }
 }
-.owl-dots{
-    text-align: center;
-    margin-top: 75px;
+.owl-dots {
+  text-align: center;
+  margin-top: 75px;
 }
-.owl-dot{
-    height: 18px;
-    width: 18px;
-    outline: none!important;
-    border-radius: 50%;
-    margin-top: 0 5px;
-    border: 2px solid #646464!important;
-    transition: all 0.3s ease;
+.owl-dot {
+  height: 18px;
+  width: 18px;
+  outline: none !important;
+  border-radius: 50%;
+  margin-top: 0 5px;
+  border: 2px solid #646464 !important;
+  transition: all 0.3s ease;
 }
-.owl-dot-active{
-    width: 35px;
-    border-radius: 19px;
+.owl-dot-active {
+  width: 35px;
+  border-radius: 19px;
 }
 .owl-dot.active,
-.owl-dot:hover{
-    background: white!important;
+.owl-dot:hover {
+  background: white !important;
 }
