--- a/scss/_soft-skills.scss
+++ b/scss/_soft-skills.scss
@@ -1,29 +1,25 @@
-.soft-skills{
-        height: 100vh;
-        background-image: url(../dist/img/pexels-alex-conchillos-3888585.jpg);
-        background-size: cover;
-        z-index: 3;
-        
-    .ssContainer{
-        padding: 10%;
-        .softskills{
-            background-color: rgba(255,255,255,0.05);
-            
-            height: 50vh;
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(20rem,1fr));
-             h4{
-                
-                color: white;
-                font-size: 3rem;
-                z-index: 1;
-                position: absolute;
-            }
-            
-        }
-    
-    }
-
-}
-
+.soft-skills {
+  height: 100vh;
  
+  background-size: cover;
+  z-index: 3;
+
+  .ssContainer {
+    padding: 10%;
+    .softskills {
+      background-color: rgba(255, 255, 255, 0.05);
+      
+      height: 50vh;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+      h4 {
+        
+        color: white;
+        font-size: 2.5rem;
+        z-index: 1;
+        position: absolute;
+        
+      }
+    }
+  }
+}
