--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,36 +1,33 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-@import 'banner';
-@import 'header';
-@import 'media';
-@import 'portfolio';
-@import 'about-me';
-@import 'skillset';
-@import 'soft-skills';
-@import 'contact';
-@import 'social';
-@import 'footer';
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+@import "banner";
+@import "header";
+@import "media";
+@import "portfolio";
+@import "about-me";
+@import "skillset";
+@import "soft-skills";
+@import "contact";
+@import "social";
+@import "footer";
 
+* {
+  ::-webkit-scrollbar {
+    display: none;
+  }
+  box-sizing: border-box;
 
-*{
-    box-sizing: border-box;
-    
-    margin: 0;
-    padding: 0;
-    font-family: 'Montserrat', sans-serif;
-    h3{
-        text-transform: uppercase;
-        color: white;
-        font-size: 2rem;
-        z-index: 99;
-        text-align: end;
-        position: relative;
-        z-index: 1;
-        padding-top: 4rem;
-        padding-right: 8rem;
-    }
-    
-    
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
+  h3 {
+    text-transform: uppercase;
+    color: white;
+    font-size: 1.5rem;
+    z-index: 99;
+    text-align: end;
+    position: relative;
+    z-index: 1;
+    padding-top: 4rem;
+    padding-right: 10%;
+  }
 }
-
-
-
