--- a/scss/social.scss
+++ b/scss/social.scss
@@ -1,57 +1,50 @@
-.social{
-    z-index: 2;
-    position: fixed;
-    bottom: 3rem;
-    right: 0;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: flex-end;
-    transform: translate(250px);
-    a{
-        color: #fff;
-        background: rgba(255,255,255,0.1);
-        font-size: 20px;
-        font-weight: 600;
-        text-decoration: none;
-        display: block;
-        margin: 5px;
-        padding: 20px;
-        width: 300px;
-        text-align: left;
-        border-radius: 50px;
-        transition: 1s;
-        transition-property: transform;
-        
-    }
-    
-    
-        
-    i{
-        
-        margin-right: 10px;
-        font-size: 30px;
-        width: 30px;
-        height: 30px;
-    }
-    
-    a:nth-child(1) i{
-        color: white;
-    }
-    a:nth-child(2) i{
-        color: #0e76a8;
-    }
-    a:nth-child(3) i{
-        color: transparent;
-        background-image: linear-gradient(45deg,#ffdf9e,#e56969,#8a49a1);
-        -webkit-background-clip: text;
-        font-weight: 600;
-     }
-     a:hover{
-        transform: translate(-140px,0);
-    }
+.social {
+  z-index: 2;
+  position: fixed;
+  bottom: 3rem;
+  right: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+  transform: translate(250px);
+  a {
+    color: #fff;
+    background: rgba(255, 255, 255, 0.1);
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+    display: block;
+    margin: 5px;
+    padding: 15px;
+    width: 300px;
+    text-align: left;
+    border-radius: 25px;
+    transition: 1s;
+    transition-property: transform;
+  }
+
+  i {
+    margin-right: 10px;
+    font-size: 30px;
+    width: 30px;
+    height: 30px;
+  }
+
+  a:nth-child(1) i {
+    color: white;
+  }
+  a:nth-child(2) i {
+    color: #0e76a8;
+  }
+  a:nth-child(3) i {
+    color: transparent;
+    background-image: linear-gradient(45deg, #ffdf9e, #e56969, #8a49a1);
+    -webkit-background-clip: text;
+    font-weight: 600;
+  }
+  a:hover {
+    transform: translate(-130px, 0);
+  }
 }
-
- 
-
