--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -45,4 +45,52 @@
       }
     }
   }
+  .about-me{
+    
+      
+    #fotoPerfil{
+      
+      width: 50vw;
+      left: 50%;
+
+    }
+    
+    
+  }
+  
+  .about-me div .about-me_texto{
+    top: -7rem !important;
+    div{
+      width: 100vw !important;
+        left: 0 !important;
+  
+    }
+
+  } 
+  .banner{
+    h1{
+      padding: 5% !important;
+
+    }
+  }
+  .skillset{
+    &:before {
+      background-position-x: 50% !important;
+
+    }
+    
+  }
+
+  .softskills div{
+
+    h4{
+      font-size: xx-large !important;
+    }
+
+  }
+  .iconoskill{
+    font-size: 3rem !important;
+  }
+ 
+  
 }
