--- a/scss/main.css
+++ b/scss/main.css
@@ -189,7 +189,7 @@
 .banner h1 {
   letter-spacing: 5px;
   position: absolute;
-  font-size: calc(4rem + .5vw);
+  font-size: calc(3rem + .5vw);
   text-transform: uppercase;
   text-align: center;
   background: rgba(0, 0, 0, 0.2);
@@ -423,6 +423,29 @@
     transition: opacity 0.4s ease-in-out 1s, -webkit-transform 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1s;
     transition: opacity 0.4s ease-in-out 1s, transform 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1s;
     transition: opacity 0.4s ease-in-out 1s, transform 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1s, -webkit-transform 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1s;
+  }
+  .about-me #fotoPerfil {
+    width: 50vw;
+    left: 50%;
+  }
+  .about-me div .about-me_texto {
+    top: -7rem !important;
+  }
+  .about-me div .about-me_texto div {
+    width: 100vw !important;
+    left: 0 !important;
+  }
+  .banner h1 {
+    padding: 5% !important;
+  }
+  .skillset:before {
+    background-position-x: 50% !important;
+  }
+  .softskills div h4 {
+    font-size: xx-large !important;
+  }
+  .iconoskill {
+    font-size: 3rem !important;
   }
 }
 
